--- a/src/styles/components/share-project.css
+++ b/src/styles/components/share-project.css
@@ -127,14 +127,13 @@
 
 .share-project-buttons {
 	display: flex;
-	height: var(--button-height-md);
+	gap: var(--space-xs);
 	position: relative;
 }
 
 .share-button-group {
 	display: flex;
-	border-radius: var(--radius-sm);
-	overflow: hidden;
+	align-items: center;
 }
 
 .share-button {
@@ -155,11 +154,16 @@
 
 .share-button-group .share-button {
 	border-radius: 0;
+	padding: 0 var(--space-ss);
+	height: var(--button-height-md);
 }
 
 .share-button-group .main-button {
 	border-top-left-radius: var(--radius-sm);
 	border-bottom-left-radius: var(--radius-sm);
+	padding-left: var(--space-xs);
+	padding-right: var(--space-xs);
+	top: 0 !important;
 }
 
 .share-button-group .dropdown-toggle {
